@@ -1,4 +1,11 @@
-$Id: CHANGES,v 1.90 2000/11/10 18:05:16 stelian Exp $
+$Id: CHANGES,v 1.91 2000/11/29 10:13:41 stelian Exp $
+
+Changes between versions 0.4b20 and 0.4b21 (released ?????????????????)
+=======================================================================
+
+1.	Fixed some bugs in the dump -w|-W logic introduced by
+	the previous version. Thanks to Andreas Dilger 
+	<adilger@turbolinux.com> for his help on this one.
 
 Changes between versions 0.4b19 and 0.4b20 (released November 10, 2000)
 =======================================================================
